Make CreateTopic slightly more readable